# Pures

./: .editorconfig  CMakeLists.txt  README.md  _config.yml  exports.def  pures.def  thrpure.c  thrpure.h
Codes/: example.c  thrpure.c  thrpure.h
Headers/: strpure.h  thrpure.h  timpure.h
Mains/: threading.c
Sources/: stdpain.h  strpain.c  strpure.c  thrpure.c  timpure.c
